62/backend/63ingress.yaml
kind: Ingress
version: 
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: backend-ingress
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: bookapp-fe
            port:
              number: 80
